# nuxp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEVELOPER-EXPERIENCE-AUDIT.md  EXTRACTION-FROM-FLORA.md  LICENSE  PLAN-close-todo-gaps.md  PROPOSAL_HANDLE_MANAGEMENT.md  README.md  REPO_STRUCTURE.md  ROADMAP.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
codegen/: generate-endpoint-map.cjs  generate-routes.cjs  jest.config.js  package-lock.json  package.json  routes.example.json
codegen/scripts/: analyze-edge-cases.ts  extract-failing-functions.sh  find-all-failing-functions.sh
codegen/src/: analyze-suites.ts  index.ts  test-classifier.ts  test-generator.ts  test-parser.ts  types.d.ts
codegen/src/config/: events.json  routes.json  target-headers.json  type-map.json
codegen/src/generator/: CppGenerator.ts  CustomRouteGenerator.ts  SSEGenerator.ts  TypeScriptGenerator.ts
codegen/src/parser/: SuiteParser.ts  TypeClassifier.ts  types.ts
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.vue  config.ts  main.ts
demo/src-tauri/: Cargo.toml  tauri.conf.json
demo/src-tauri/src/: lib.rs  main.rs
demo/src/assets/: nuxp-idle.webm
demo/src/components/: DebugPanel.vue  ScriptCard.vue  ScriptToolkit.vue
demo/src/router/: index.ts
demo/src/services/: MockBridge.ts  types.ts
demo/src/stores/: connection.ts
demo/src/styles/: variables.css
docs/: ADDING-ENDPOINTS.md  ARCHITECTURE.md  CONFIGURABLE_PORT_SPEC.md  CUSTOM_ROUTES_CODEGEN_SPEC.md  SSE_CODEGEN_SPEC.md  TUTORIAL.md  _config.yml  getting-started.md  index.md
docs/api/: README.md
docs/assets/css/: style.scss
docs/images/: nuxp-dance.webm  nuxp-destruction.webm
docs/internal/: AGENT_TASKS.md  IMPLEMENTATION_PLAN.md  PARALLEL_TASKS.md  TASKS.md  TASKS_FILESYSTEM.md  TASKS_FRONTEND_DEVOPS.md  TASKS_INTEGRATION.md  TASKS_MIGRATION.md  TASKS_TEST_PLUGIN.md  TASKS_TUTORIAL_PLUGIN.md
docs/plans/: 2026-02-15-script-toolkit-design.md  2026-02-15-script-toolkit-plan.md  2026-02-22-sdk-documentation-design.md
examples/: README.md  basic-api.js
plugin/: .clang-tidy  CMakeLists.txt  CMakePresets.json
plugin/lib/: README.md
plugin/mac/: README.md
plugin/mac/resources/: Info.plist  Info.plist.in  TemplatePlugin.r  TemplatePlugin2x.r
plugin/mac/xcconfig/: AIPluginCommon.xcconfig  AIPluginDebug.xcconfig  AIPluginRelease.xcconfig
plugin/mac/xcode/ExamplePlugin.xcodeproj/: project.pbxproj
plugin/sdk/: AIDxfDwgPrefs.h  AIGradient.h  AIPluginNames.h  AIPreferenceKeys.h  AITypes.h  IAIArtboards.hpp  IllustratorSDK.h  SPAccess.h  SPBasic.h  SPFiles.h  SPInterf.h  SPPlugs.h  SPProps.h  VERSION
plugin/sdk-docs/: getting-started-guide.md  porting-guide.md  programmers-guide.md  using-adobe-text-engine.md
plugin/src/: ConfigManager.cpp  ConfigManager.hpp  Errors.cpp  Errors.hpp  EventMapper.hpp  HandleManager.cpp  HandleManager.hpp  HandleRegistry.hpp  HttpServer.cpp  HttpServer.hpp  MainThreadDispatch.cpp  MainThreadDispatch.hpp  ManagedHandleRegistry.hpp  MenuHandler.cpp  MenuHandler.hpp  NuxpThreadSafety.h  Plugin.cpp  Plugin.hpp  SSE.cpp  SSE.hpp  SuitePointers.cpp  SuitePointers.hpp
plugin/src/bridges/: ATEBridge.cpp  ATEBridge.h
plugin/src/endpoints/: DemoEndpoints.cpp  DemoEndpoints.hpp  NUXPHandlers.cpp  README.md  TextEndpoints.cpp  TextEndpoints.hpp  XMPEndpoints.cpp  XMPEndpoints.hpp
plugin/src/endpoints/handwritten/: DemoEndpoints.cpp  ExportEndpoints.cpp  NUXPHandlers.cpp  ShapeEndpoints.cpp  TextEndpoints.cpp  TextEndpoints.hpp
plugin/src/utils/: ColorUtils.cpp  ColorUtils.hpp  DocumentUtils.cpp  DocumentUtils.hpp  GeometryUtils.cpp  GeometryUtils.hpp  LayerUtils.cpp  LayerUtils.hpp  SelectionUtils.cpp  SelectionUtils.hpp  StringUtils.cpp  StringUtils.hpp  ToolUtils.cpp  ToolUtils.hpp  XMPUtils.cpp  XMPUtils.hpp
scripts/: clean-history.sh  create-plugin.sh  generate.sh  prepare-release.sh  setup-sdk.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/adapters/: DocumentAdapter.test.ts  DocumentAdapter.ts  HttpAdapter.ts  PlacementAdapter.test.ts  PlacementAdapter.ts  PluginAdapter.ts  SSEAdapter.ts
sdk/src/bridge/: AutoQueue.ts  Bridge.ts  types.ts
sdk/src/geometry/: ArtboardBoundsManager.test.ts  ArtboardBoundsManager.ts  CoordinateSystemManager.test.ts  CoordinateSystemManager.ts
sdk/src/primitives/: art.ts  duplication.test.ts  duplication.ts  group.test.ts  group.ts  layer.test.ts  layer.ts  text.ts  types.ts
sdk/src/schemas/: DocumentSchemas.test.ts  DocumentSchemas.ts
sdk/src/services/: AppearanceConfigService.ts  DocumentIndexService.test.ts  DocumentIndexService.ts  FontConfigService.ts  LoggerService.ts  SettingsService.test.ts  SettingsService.ts  SvgCacheService.test.ts  SvgCacheService.ts  SvgLoader.test.ts  SvgLoader.ts  SvgPlacementService.test.ts  SvgPlacementService.ts  SymbolManagementService.ts
sdk/src/tauri/: TauriDialogService.ts  TauriFsWrapper.ts  tauri-shims.d.ts
sdk/src/types/: appearance.ts  core.ts  events.ts
sdk/src/utils/: apiHelpers.test.ts  apiHelpers.ts  asyncErrorHandling.test.ts  asyncErrorHandling.ts  contrastChecker.test.ts  contrastChecker.ts  environment.ts  sizeCalculator.test.ts  sizeCalculator.ts
shell/: .env.example  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
shell/src/: App.vue  main.ts  vite-env.d.ts
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/icons/: icon.icns
shell/src-tauri/src/: main.rs
shell/src/components/: DebugPanel.vue  DocumentStatus.vue  Sidebar.vue
shell/src/router/: index.ts
shell/src/sdk/: bridge.ts  config.ts  configApi.ts  defaults.ts  defaults.ts.in  events.ts  index.ts  mockBridge.ts
shell/src/services/: api.ts  filesystem.ts  illustrator.ts
shell/src/stores/: document.ts  index.ts
shell/src/styles/: main.css
(+71 files in other folders)
